--- a/public_html/template/css/style.css
+++ b/public_html/template/css/style.css
@@ -442,7 +442,7 @@ nav {
 
 .new_item {
     min-width: calc(300px - 1em);
-    width: calc((100% / 2) - 1em);
+    width: calc((100% / 3) - 1em);
     max-width: 100%;
     border: 4px solid #e9e9e9;
     border-radius: 20px;
@@ -471,15 +471,36 @@ nav {
     object-position: center;
 }
 
-.new_item .name {
+.new_item .info{
     padding: 1em;
     min-height: 4em;
-    font-size: 18px;
+}
+
+.new_item .desc{
+    margin-top: 10px;
+    color: #8f93a0;
+    font-weight: 600;
+    font-size: 16px;
+    word-wrap: break-word;
+    word-break: break-all;
+}
+
+.new_item .name {
+    font-size: 19px;
     color: #4f5661;
     font-weight: 600;
     word-wrap: break-word;
     word-break: break-all;
 }
+
+.new_item img{
+    background: #e9e9e9;
+}
+
+.new_item .non_image{
+    object-fit: contain;
+}
+
 
 .news_list {
     display: flex;
